[package]
name = "druid_example"
version = "0.1.0"
edition = "2021"

[dependencies]
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "fc05e965c85fced8720c655685e02478e0530e94" # update this when upgrading to newer druid
features = ["im", "serde"]